Fixed ul styles, fixed Venues block spacing.

--- a/app/assets/css/main.css
+++ b/app/assets/css/main.css
@@ -50,11 +50,15 @@
 		@apply text-yellow;
 	}
 	ul {
-		@apply list-disc pl-4;
+		li {
+			@apply relative pl-3 before:content-['•'] before:absolute before:left-0;
+		}
 	}
 	nav {
 		ul {
-			@apply list-none pl-0;
+			li {
+				@apply pl-0 before:content-none;
+			}
 		}
 	}
 }
@@ -72,7 +76,23 @@
 	a.calltoaction {
 		@apply !bg-red-light !text-white;
 	}
+
 	h2[id^="reka-dialog-title"] {
 		@apply !mb-0;
+	}
+
+	a.rich-yellow--button {
+		@apply relative z-10 overflow-hidden inline-flex items-center justify-between gap-2 font-shoulders font-semibold uppercase text-[1.5rem] leading-8 text-secondary bg-info rounded-md px-4 py-2 transition-colors duration-200 no-underline;
+
+		&::after {
+			@apply content-[''] inline-block w-8 h-8 relative bg-current translate-x-0 -rotate-45 transition-transform duration-200 ease-out mask-[url(/arrow-down-right.svg)] mask-no-repeat mask-center mask-contain;
+		}
+		&::hover {
+			@apply text-blue-text bg-yellow w-auto;
+
+			&::after {
+				@apply translate-x-1 -rotate-45;
+			}
+		}
 	}
 }
